--- a/static/css/follower_sp.css
+++ b/static/css/follower_sp.css
@@ -16,6 +16,10 @@
   text-align: center;
 }
 
+header {
+  margin-bottom: 40px;
+}
+
 /* --- ナビゲーションバー --- */
 
 div.nav {
@@ -28,7 +32,6 @@ div.nav {
   border-bottom: 1px #cccccc solid;
   /* 下境界線 */
   font-size: 80%;
-  margin: 5px 0 0 5px;
 }
 
 /* --- メニューエリア --- */
@@ -101,7 +104,7 @@ div.nav ul.nl li a:hover {
 }
 
 .profilecard {
-  width: 38vw;
+  width: 45vw;
   margin: 3vw auto;
   padding: 1vw;
   background-color: #EEEEEE;
@@ -110,32 +113,23 @@ div.nav ul.nl li a:hover {
 
 .profile-header {
   display: flex;
-}
-
-.profile-header img {
-  width: 25%;
-  height: 25%;
+  text-align: center;
 }
 
 .profile-header p {
-  margin-left: 20px;
+  margin: auto;
+  font-size: 3vw;
+  text-align: center;
+  margin-right: 40px;
 }
 
-.profile-header p a img {
-  width: 20px;
-  height: 12px;
-  margin-left: 5px;
+.profile-header img {
+  width: 50%;
+  margin: 2vw 2vw;
 }
 
 p span {
   display: inline-block;
-}
-
-p span .user-name {
-  margin-top: 7vw;
-  margin-left: 1vw;
-  font-size: 5vw;
-  word-break: break-all
 }
 
 a img .edit {
@@ -150,157 +144,71 @@ a :hover {
 
 .profile-content {
   margin: 1vw 0;
-  text-align: center;
 }
 
 .profile-content p {
-  padding: 1vw;
   line-height: 1.4;
+  text-align: center;
   font-weight: 400;
+  font-size: 15px;
 }
 
 .profilecard .fixed {
   margin-top: 80px;
 }
 
-.stream {
-  width: 38vw;
-  margin: 0 auto;
+#top_scroll{
+    position: relative;
+    z-index: 100;
+    margin: 0;
+    padding: 0;
 }
 
-.content {
-  margin-top: 2vw;
-  background-color: #EEEEEE;
+#page-top1{
+    display: block;
+    position: fixed;
+    z-index: 9999;
+    bottom: -250px;
+    right: 10px;
+    width: 35px;
+    height: 35px;
+    padding: 0;
+    color: #222;
+    text-align: center;
+    text-decoration: none;
+    transition: 1s;
+    -webkit-transition: 1s;
 }
 
-.stream-header {
-  display: flex;
+#page-top1:hover{
+    background: ;
+    transform: translateY(-10px);
 }
 
-.stream-header img {
-  margin: 1vw 1vw;
-  width: 6vw;
-  height: 6vw;
+#top_scroll:hover{
+    background: #fff;
 }
 
-.stream-header p {
-  margin-left: 5px;
-}
-
-span {
-  display: inline-block;
-  font-size: 3vw;
-}
-
-p .tweet-time {
-  font-size: 0.8vw;
-  float: right;
-  margin: 0 0 0 5vw;
-}
-
-p .user-name {
-  margin: 0 0 0 0.5vw;
-}
-
-.inline {
-  display: flex;
-}
-
-.outline {
-  display: flex;
-}
-
-.stream-content {
-  width: 100%;
-}
-
-.stream-content p {
+.erra {
   text-align: center;
-}
 
-.stream-footer {
-  width: 15%;
-  margin-top: 5vw;
-  margin-bottom: 1vw;
-}
-
-.stream.fixed {
-  margin-top: 65px;
-}
-
-.stream-delete {
-  margin-top: 2vw;
-  margin-left: 8vw;
-  margin-bottom: 1vw;
-  margin-right: 3vw;
-  display: flex;
-}
-
-a.cp_btn {
-  display: block;
-  font-size: 15px;
-  font-weight: 400;
-  width: 30px;
-  padding: 0.3em;
-  text-align: center;
-  text-decoration: none;
-  color: #AAAAAA;
-  border: 2px solid #AAAAAA;
-  border-radius: 3px;
-  transition: .4s;
-}
-
-a.cp_btn:hover {
-  background: #AAAAAA;
-  color: #fff;
-}
-
-#top_scroll {
-  position: relative;
-  z-index: 100;
-  margin: 0;
-  padding: 0;
-}
-
-#page-top1 {
-  display: block;
-  position: fixed;
-  z-index: 9999;
-  bottom: -250px;
-  right: 10px;
-  width: 35px;
-  height: 35px;
-  padding: 0;
-  color: #222;
-  text-align: center;
-  text-decoration: none;
-  transition: 1s;
-  -webkit-transition: 1s;
-}
-
-#page-top1:hover {
-  background: ;
-  transform: translateY(-10px);
-}
-
-#top_scroll:hover {
-  background: #fff;
 }
 
 .square_btn {
-  position: relative;
-  display: inline-block;
-  padding: 0.25em 0.5em;
-  text-decoration: none;
-  color: #FFF;
-  background: #4646ff;
-  border-bottom: solid 2px #1e1eff;
-  border-radius: 4px;
-  box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
-  font-weight: bold;
+    position: relative;
+    display: inline-block;
+    padding: 0.25em 0.5em;
+    text-decoration: none;
+    color: #FFF;
+    background: #4646ff;
+    border-bottom: solid 2px #1e1eff;
+    border-radius: 4px;
+    box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
+    font-weight: bold;
+    font-size: 10px;
 }
 
 .square_btn:active {
-  border-bottom: solid 2px #4646ff;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+    border-bottom: solid 2px #4646ff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
