--- a/static/css/login_sp.css
+++ b/static/css/login_sp.css
@@ -17,19 +17,21 @@ input {
 }
 
 #form img {
-  padding-left: 120px;
+  padding-left: 100px;
 }
 
 #form{
-    width: 350px;
+    width: 300px;
     margin: 30px auto;
     padding: 20px;
     border: 1px solid #555;
+    height: 500px;
 }
 
 form p {
     font-size: 14px;
     text-shadow: 2px 2px 0 #000;
+    text-align: center;
     margin-bottom: 5px;
 }
 
@@ -50,7 +52,7 @@ form p {
 
 input[type="text"],
 input[type="password"] {
-    width: 335px;
+    width: 300px;
     padding: 4px;
     font-size: 14px;
     margin: 0 auto;
