--- a/static/css/new_sp.css
+++ b/static/css/new_sp.css
@@ -5,7 +5,7 @@ body {
 }
 
 p {
-  margin: 0;
+  margin: 5px 0;
 }
 
 form {
@@ -13,15 +13,11 @@ form {
 }
 
 input {
-  margin: 0;
-}
-
-#form img {
-  padding-left: 120px;
+  margin: 0 10px;
 }
 
 #form{
-    width: 350px;
+    width: 300px;
     margin: 30px auto;
     padding: 20px;
     border: 1px solid #555;
@@ -30,27 +26,27 @@ input {
 form p {
     font-size: 14px;
     text-shadow: 2px 2px 0 #000;
-    margin-bottom: 5px;
 }
 
 .form-title{
     font-size: 30px;
     text-align: center;
-    text-shadow: 2px 2px 0 #000;
+    margin-bottom: 20px;
     border-bottom:solid 3px #fff;
+    text-shadow: 3px 3px 0 #000;
 }
 
 .login {
     margin-bottom: 20px;
 }
 
-.password {
+/*.password {
     margin-bottom: 20px;
-}
+}*/
 
 input[type="text"],
 input[type="password"] {
-    width: 335px;
+    width: 290px;
     padding: 4px;
     font-size: 14px;
     margin: 0 auto;
@@ -58,6 +54,11 @@ input[type="password"] {
 
 .submit{
     text-align: center;
+    margin: 15px 0;
+}
+
+input .submit {
+  margin: 0 20px;
 }
 
 /* skin */
@@ -113,23 +114,56 @@ input[type="password"] {
   cursor: pointer;
   cursor: hand;
   margin: 0 20px;
+
   text-shadow: 2px 2px 2px black;
 }
 
-.error {
+#form{
+  background: #c0c0c0;
+  background-image: -webkit-linear-gradient(top, #c0c0c0, Courier New);
+  background-image: -moz-linear-gradient(top, #c0c0c0, Courier New);
+  background-image: -ms-linear-gradient(top, #c0c0c0, Courier New);
+  background-image: -o-linear-gradient(top, #c0c0c0, Courier New);
+  background-image: linear-gradient(to bottom, #c0c0c0, Courier New);
+  -webkit-border-radius: 6;
+  -moz-border-radius: 6;
+  border-radius: 6px;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 20px 20px 20px 20px;
+  text-decoration: none;
+}
+
+#form .error {
   text-align: center;
+  color: red;
+  margin: 15px 0;
+  font-weight: 400;
 }
 
-.error_log {
-  font-weight: 400;
-  font-size: 18px;
+#form .log_error {
+  text-align: center;
   color: red;
-  margin-bottom: 10px;
+  margin: 15px 0;
+  font-weight: 400;
+  font-size: 19px;
 }
 
-.error_login {
-  font-weight: 400;
-  font-size: 16px;
-  color: red;
-  margin-bottom: 10px;
+#form .profile_img img {
+  width: 20%;
+  height: 20%;
+}
+
+#form .profile_img {
+  margin-bottom: 30px;
+}
+
+.file {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.submit a {
+  float: right;
 }
