--- a/static/css/oki_pad.css
+++ b/static/css/oki_pad.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+header {
+  margin-bottom: 40px;
+}
+
 .profile {
   display: inline-block;
   width: 100%;
@@ -16,45 +20,76 @@
   text-align: center;
 }
 
+/* --- ナビゲーションバー --- */
+
 div.nav {
   width: 100%;
+  /* ナビゲーションの幅 */
   background: #f9f9f9 url(../img/off.gif) repeat-x top;
+  /* ナビゲーションの背景 */
   border-top: 1px #cccccc solid;
+  /* 上境界線 */
   border-bottom: 1px #cccccc solid;
+  /* 下境界線 */
   font-size: 80%;
 }
 
+/* --- メニューエリア --- */
+
 div.nav ul.nl {
   width: 600px;
+  /* メニューの幅 */
   margin: 0 auto;
+  /* センターに配置 */
   padding: 0;
   background: #f9f9f9 url(../img/off.gif) repeat-x top;
+  /* メニューの背景 */
   border-left: 1px #cccccc solid;
+  /* メニューの左境界線 */
   border-right: 1px #ffffff solid;
+  /* メニューの右境界線 */
   list-style-type: none;
   text-align: center;
 }
 
+/* --- メニュー項目 --- */
+
 div.nav ul.nl li {
   width: 20%;
+  /* 項目の幅 */
   float: left;
 }
+
+/* --- リンク --- */
 
 div.nav ul.nl li a {
   display: block;
   position: relative;
+  /* IE6用 */
   padding: 11px 2px;
+  /* リンクエリアのパディング（上下、左右） */
   border-top: 1px #ffffff solid;
+  /* リンクエリアの上境界線 */
   border-bottom: 1px #808080 solid;
+  /* リンクエリアの下境界線 */
   border-left: 1px #ffffff solid;
+  /* リンクエリアの左境界線 */
   border-right: 1px #cccccc solid;
+  /* リンクエリアの右境界線 */
   text-decoration: none;
+  /* テキストの下線（なし） */
 }
+
+/* --- ポイント時の設定 --- */
 
 div.nav ul.nl li a:hover {
   background: #f9f9f9 url(../img/on.gif) repeat-x top;
+  /* ポイント時の背景 */
   text-decoration: underline;
+  /* テキストの下線（あり） */
 }
+
+/* --- clearfix --- */
 
 .clearFix:after {
   content: ".";
@@ -69,6 +104,7 @@ div.nav ul.nl li a:hover {
 }
 
 dl.search_box{
+  width: 70%;
 	position: relative;
 	background-color:#fff;
 	border:1px solid #aaa;
@@ -100,20 +136,16 @@ dl.search_box dd {
 
 dl.search_box dd button {
 	display:block;
+	padding:10px;
 	background:none;
 	border:none;
-  cursor: pointer;
-  padding-top: 5px;
 }
 
 dl.search_box dd button span {
 	display:block;
-  padding-right: 10px;
-  padding-bottom: 10px;
 	width:20px;
 	height:20px;
-	background:url(../img/megane.png) no-repeat scroll 0 0;
-  background-size: 30px;
+	background:url(../img/searches.png) no-repeat scroll 0 0;
 }
 
 input[type="text"] {
@@ -121,7 +153,7 @@ input[type="text"] {
 }
 
 .stream {
-  width: 50vw;
+  width: 38vw;
   margin: 0 auto;
 }
 
@@ -135,7 +167,7 @@ input[type="text"] {
 }
 
 .stream-header img {
-  margin: 1vw 1vw;
+  margin: 2vw 2vw;
   width: 6vw;
   height: 6vw;
 }
@@ -146,10 +178,9 @@ span {
 }
 
 p .tweet-time {
-  font-size: 5px;
+  font-size: 0.8vw;
   float: right;
   margin: 0 0 0 5vw;
-  padding-left: 70px;
 }
 
 p .user-name {
@@ -161,24 +192,22 @@ p .user-name {
 }
 
 .stream-content {
-  width: 100%;
+  width: 85%;
 }
 
 .stream-content p {
   text-align: center;
-  padding: 1vw 0.5vw 1vw 0.5vw;
-  font-size: 20px;
+  padding: 1vw 0.5vw 1vw 2vw;
 }
 
 .stream-footer {
   width: 15%;
-  float: right;
-  margin-right: 5px;
+  margin-top: 5vw;
   margin-bottom: 1vw;
 }
 
 .favorite a img {
-  width: 70%;
+  width: 50%;
 }
 
 .stream.fixed {
@@ -187,18 +216,6 @@ p .user-name {
 
 .erra {
   text-align: center;
-  font-weight: 400;
-  font-size: 30px;
-  background: white;
-}
-
-.content {
-  margin-top: 30px;
-}
-
-header .profile {
-  display: inline-block;
-  width: 100%;
 }
 
 #top_scroll{
