--- a/static/css/search_pad.css
+++ b/static/css/search_pad.css
@@ -149,11 +149,11 @@ p .tweet-time {
   font-size: 5px;
   float: right;
   margin: 0 0 0 5vw;
-  padding-left: 70px;
 }
 
 p .user-name {
-  margin: 0 0 0 0.5vw;
+  margin: 1vw 0 0 2vw;
+  font-size: 20px;
 }
 
 .inline {
