--- a/static/css/top_sp.css
+++ b/static/css/top_sp.css
@@ -1,4 +1,8 @@
 @charset "utf-8";
+/*スマホ*/
+header {
+  margin-bottom: 40px;
+}
 
 .profile {
   display: inline-block;
@@ -28,14 +32,12 @@ div.nav {
   border-bottom: 1px #cccccc solid;
   /* 下境界線 */
   font-size: 80%;
-  margin: 5px 0 0 5px;
 }
 
 /* --- メニューエリア --- */
 
 div.nav ul.nl {
-  width: 600px;
-  /* メニューの幅 */
+  width: 350px;
   margin: 0 auto;
   /* センターに配置 */
   padding: 0;
@@ -100,71 +102,8 @@ div.nav ul.nl li a:hover {
   min-height: 1px;
 }
 
-.profilecard {
-  width: 38vw;
-  margin: 3vw auto;
-  padding: 1vw;
-  background-color: #EEEEEE;
-  border: solid 10px #f7b52c;
-}
-
-.profile-header {
-  display: flex;
-}
-
-.profile-header img {
-  width: 25%;
-  height: 25%;
-}
-
-.profile-header p {
-  margin-left: 20px;
-}
-
-.profile-header p a img {
-  width: 20px;
-  height: 12px;
-  margin-left: 5px;
-}
-
-p span {
-  display: inline-block;
-}
-
-p span .user-name {
-  margin-top: 7vw;
-  margin-left: 1vw;
-  font-size: 5vw;
-  word-break: break-all
-}
-
-a img .edit {
-  margin-left: 1vw;
-  width: 2vw;
-  height: auto;
-}
-
-a :hover {
-  filter: brightness(40%);
-}
-
-.profile-content {
-  margin: 1vw 0;
-  text-align: center;
-}
-
-.profile-content p {
-  padding: 1vw;
-  line-height: 1.4;
-  font-weight: 400;
-}
-
-.profilecard .fixed {
-  margin-top: 80px;
-}
-
 .stream {
-  width: 38vw;
+  width: 60vw;
   margin: 0 auto;
 }
 
@@ -179,128 +118,118 @@ a :hover {
 
 .stream-header img {
   margin: 1vw 1vw;
-  width: 6vw;
-  height: 6vw;
-}
-
-.stream-header p {
-  margin-left: 5px;
-}
-
-span {
-  display: inline-block;
-  font-size: 3vw;
-}
-
-p .tweet-time {
-  font-size: 0.8vw;
-  float: right;
-  margin: 0 0 0 5vw;
+  width: 10vw;
+  height: 10vw;
 }
 
 p .user-name {
-  margin: 0 0 0 0.5vw;
+  display: inline-block;
+  font-size: 2vw;
+  margin: 0 0 0 1.5vw;
+}
+
+p .tweet-time {
+  font-size: 1px;
+  float: right;
+  display: inline-block;
+  padding-left: 30px;
 }
 
 .inline {
   display: flex;
 }
 
-.outline {
-  display: flex;
-}
-
 .stream-content {
-  width: 100%;
+  width: 85%;
+  padding-left: 20px;
 }
 
 .stream-content p {
   text-align: center;
+  padding: 1vw 2vw 1vw 0.5vw;
+  font-weight: 400;
+  font-size: 25px;
 }
 
 .stream-footer {
-  width: 15%;
-  margin-top: 5vw;
-  margin-bottom: 1vw;
+  width: 100%;
+}
+
+.favorite img {
+  margin: 1vw 2vw;
+  width: 8vw;
+  height: 8vw;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.favorite img :hover {
+  filter: brightness(40%);
 }
 
 .stream.fixed {
   margin-top: 65px;
 }
 
-.stream-delete {
-  margin-top: 2vw;
-  margin-left: 8vw;
-  margin-bottom: 1vw;
-  margin-right: 3vw;
-  display: flex;
+#top_scroll{
+    position: relative;
+    z-index: 100;
+    margin: 0;
+    padding: 0;
 }
 
-a.cp_btn {
-  display: block;
-  font-size: 15px;
-  font-weight: 400;
-  width: 30px;
-  padding: 0.3em;
-  text-align: center;
-  text-decoration: none;
-  color: #AAAAAA;
-  border: 2px solid #AAAAAA;
-  border-radius: 3px;
-  transition: .4s;
+#page-top1{
+    display: block;
+    position: fixed;
+    z-index: 9999;
+    bottom: -250px;
+    right: 10px;
+    width: 35px;
+    height: 35px;
+    padding: 0;
+    color: #222;
+    text-align: center;
+    text-decoration: none;
+    transition: 1s;
+    -webkit-transition: 1s;
 }
 
-a.cp_btn:hover {
-  background: #AAAAAA;
-  color: #fff;
+#page-top1:hover{
+    background: ;
+    transform: translateY(-10px);
 }
 
-#top_scroll {
-  position: relative;
-  z-index: 100;
-  margin: 0;
-  padding: 0;
+#top_scroll:hover{
+    background: #fff;
 }
 
-#page-top1 {
-  display: block;
-  position: fixed;
-  z-index: 9999;
-  bottom: -250px;
-  right: 10px;
-  width: 35px;
-  height: 35px;
-  padding: 0;
-  color: #222;
-  text-align: center;
-  text-decoration: none;
-  transition: 1s;
-  -webkit-transition: 1s;
+#follow img {
+  display: none;
 }
 
-#page-top1:hover {
-  background: ;
-  transform: translateY(-10px);
-}
-
-#top_scroll:hover {
-  background: #fff;
+#follow img:first-child {
+  display: inline;
 }
 
 .square_btn {
-  position: relative;
-  display: inline-block;
-  padding: 0.25em 0.5em;
-  text-decoration: none;
-  color: #FFF;
-  background: #4646ff;
-  border-bottom: solid 2px #1e1eff;
-  border-radius: 4px;
-  box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
-  font-weight: bold;
+    position: relative;
+    display: inline-block;
+    padding: 0.25em 0.5em;
+    text-decoration: none;
+    color: #FFF;
+    background: #4646ff;
+    border-bottom: solid 2px #1e1eff;
+    border-radius: 4px;
+    box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
+    font-weight: bold;
+    font-size: 13px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    float: right;
+    margin-top: 5px;
 }
 
 .square_btn:active {
-  border-bottom: solid 2px #4646ff;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+    border-bottom: solid 2px #4646ff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
