--- a/static/css/tweet_pad.css
+++ b/static/css/tweet_pad.css
@@ -103,135 +103,70 @@ div.nav ul.nl li a:hover {
   min-height: 1px;
 }
 
-.stream {
-  width: 50vw;
-  margin: 0 auto;
-}
-
-.content {
-  margin-top: 2vw;
-  background-color: #EEEEEE;
-}
-
-.stream-header {
-  display: flex;
-}
-
-.stream-header img {
-  margin: 1vw 1vw;
-  width: 6vw;
-  height: 6vw;
-}
-
-p .user-name {
-  display: inline-block;
-  font-size: 2vw;
-  margin: 0 0 0 0.5vw;
-}
-
-p .tweet-time {
-  font-size: 1.0vw;
-  float: right;
-  display: inline-block;
-  margin-left: 80px;
-  margin-top: 20px;
-}
-
-.inline {
-  display: flex;
-}
-
-.stream-content {
-  width: 85%;
-  padding-left: 20px;
-}
-
-.stream-content p {
+.tweet_box {
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  font-weight: bold;
+  color: #6091d3;
+  background: #FFF;
+  border: solid 5px #6091d3;
+  border-radius: 10px;
+  width: 300px;
+  height: 320px;
   text-align: center;
-  padding: 1vw 2vw 1vw 0.5vw;
-  font-weight: 400;
+  background:#EEEEEE;
+  background-image: -webkit-linear-gradient(top, #EEEEEE, Courier New);
+  background-image: -moz-linear-gradient(top, #EEEEEE, Courier New);
+  background-image: -ms-linear-gradient(top, #EEEEEE, Courier New);
+  background-image: -o-linear-gradient(top, #EEEEEE, Courier New);
+  background-image: linear-gradient(to bottom, #EEEEEE, Courier New);
+  -webkit-border-radius: 6;
+  -moz-border-radius: 6;
+}
+
+.tweet_box {
+  margin: 20px auto;
+  padding: 0;
+}
+
+textarea {
+  width: 200px;
+  height: 200px;
+  font-size: 1.3em;
+  margin: 10px auto;
+}
+
+.submit {
+  text-align: center;
+}
+
+.submit input {
+  background: #fff;
+  background-image: -webkit-linear-gradient(top, #fff, #fff);
+  background-image: -moz-linear-gradient(top, #fff, #fff);
+  background-image: -ms-linear-gradient(top, #fff, #fff);
+  background-image: -o-linear-gradient(top, #fff, #fff);
+  background-image: linear-gradient(to bottom, #fff, #fff);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  -webkit-box-shadow: 1px 1px 3px #666666;
+  -moz-box-shadow: 1px 1px 3px #666666;
+  box-shadow: 1px 1px 3px #666666;
+  font-family: Courier New;
+  color: #4169E1;
+  font-weight: 800;
   font-size: 25px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
 }
 
-.stream-footer {
-  width: 100%;
-}
-
-.favorite img {
-  margin: 1vw 1vw;
-  width: 6vw;
-  height: 6vw;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-.favorite img :hover {
-  filter: brightness(40%);
-}
-
-.stream.fixed {
-  margin-top: 65px;
-}
-
-#top_scroll{
-    position: relative;
-    z-index: 100;
-    margin: 0;
-    padding: 0;
-}
-
-#page-top1{
-    display: block;
-    position: fixed;
-    z-index: 9999;
-    bottom: -250px;
-    right: 10px;
-    width: 35px;
-    height: 35px;
-    padding: 0;
-    color: #222;
-    text-align: center;
-    text-decoration: none;
-    transition: 1s;
-    -webkit-transition: 1s;
-}
-
-#page-top1:hover{
-    background: ;
-    transform: translateY(-10px);
-}
-
-#top_scroll:hover{
-    background: #fff;
-}
-
-#follow img {
-  display: none;
-}
-
-#follow img:first-child {
-  display: inline;
-}
-
-.square_btn {
-    position: relative;
-    display: inline-block;
-    padding: 0.25em 0.5em;
-    text-decoration: none;
-    color: #FFF;
-    background: #4646ff;
-    border-bottom: solid 2px #1e1eff;
-    border-radius: 4px;
-    box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
-    font-weight: bold;
-    font-size: 13px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    float: right;
-    margin-top: 20px;
-}
-
-.square_btn:active {
-    border-bottom: solid 2px #4646ff;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+.submit input:hover {
+  background: #E6E6FA;
+  background-image: -webkit-linear-gradient(top, #E6E6FA, #E6E6FA);
+  background-image: -moz-linear-gradient(top, #E6E6FA, #E6E6FA);
+  background-image: -ms-linear-gradient(top, #E6E6FA, #E6E6FA);
+  background-image: -o-linear-gradient(top, #E6E6FA, #E6E6FA);
+  background-image: linear-gradient(to bottom, #E6E6FA, #E6E6FA);
+  text-decoration: none;
 }
