--- a/static/css/user_pro_pad.css
+++ b/static/css/user_pro_pad.css
@@ -28,7 +28,6 @@ div.nav {
   border-bottom: 1px #cccccc solid;
   /* 下境界線 */
   font-size: 80%;
-  margin: 5px 0 0 5px;
 }
 
 /* --- メニューエリア --- */
@@ -112,30 +111,20 @@ div.nav ul.nl li a:hover {
   display: flex;
 }
 
-.profile-header img {
-  width: 25%;
-  height: 25%;
-}
-
 .profile-header p {
-  margin-left: 20px;
+  margin-left: 3vw;
+  font-size: 3vw;
+  padding-top: 10px;
 }
 
-.profile-header p a img {
-  width: 20px;
-  height: 12px;
-  margin-left: 5px;
+.profile-header img {
+  width: 20%;
+  height: 20%;
+  margin: 2vw 2vw;
 }
 
 p span {
   display: inline-block;
-}
-
-p span .user-name {
-  margin-top: 7vw;
-  margin-left: 1vw;
-  font-size: 5vw;
-  word-break: break-all
 }
 
 a img .edit {
@@ -150,12 +139,12 @@ a :hover {
 
 .profile-content {
   margin: 1vw 0;
-  text-align: center;
 }
 
 .profile-content p {
   padding: 1vw;
   line-height: 1.4;
+  text-align: center;
   font-weight: 400;
 }
 
@@ -183,39 +172,45 @@ a :hover {
   height: 6vw;
 }
 
-.stream-header p {
-  margin-left: 5px;
+p .tweet-time {
+  float: right;
+  text-align: center;
+  padding-bottom: 10px;
+  font-size: 8px;
+}
+
+p .user-name {
+  margin-left: 3vw;
+  font-size: 3vw;
+  word-break: break-all
 }
 
 span {
   display: inline-block;
-  font-size: 3vw;
 }
 
-p .tweet-time {
+span .tweet-time {
   font-size: 0.8vw;
-  float: right;
-  margin: 0 0 0 5vw;
 }
 
-p .user-name {
-  margin: 0 0 0 0.5vw;
+span .follow {
+  margin-left: 1vw;
+  padding: 0.2vw;
+  font-size: 0.8vw;
+  background-color: #B9DCF2;
 }
 
 .inline {
   display: flex;
 }
 
-.outline {
-  display: flex;
-}
-
 .stream-content {
-  width: 100%;
+  width: 85%;
 }
 
 .stream-content p {
   text-align: center;
+  padding: 1vw 0.5vw 1vw 2vw;
 }
 
 .stream-footer {
@@ -224,83 +219,61 @@ p .user-name {
   margin-bottom: 1vw;
 }
 
+.favorite a img {
+  width: 70%;
+}
+
 .stream.fixed {
   margin-top: 65px;
 }
 
-.stream-delete {
-  margin-top: 2vw;
-  margin-left: 8vw;
-  margin-bottom: 1vw;
-  margin-right: 3vw;
-  display: flex;
+#top_scroll{
+    position: relative;
+    z-index: 100;
+    margin: 0;
+    padding: 0;
 }
 
-a.cp_btn {
-  display: block;
-  font-size: 15px;
-  font-weight: 400;
-  width: 30px;
-  padding: 0.3em;
-  text-align: center;
-  text-decoration: none;
-  color: #AAAAAA;
-  border: 2px solid #AAAAAA;
-  border-radius: 3px;
-  transition: .4s;
+#page-top1{
+    display: block;
+    position: fixed;
+    z-index: 9999;
+    bottom: -250px;
+    right: 10px;
+    width: 35px;
+    height: 35px;
+    padding: 0;
+    color: #222;
+    text-align: center;
+    text-decoration: none;
+    transition: 1s;
+    -webkit-transition: 1s;
 }
 
-a.cp_btn:hover {
-  background: #AAAAAA;
-  color: #fff;
+#page-top1:hover{
+    background: ;
+    transform: translateY(-10px);
 }
 
-#top_scroll {
-  position: relative;
-  z-index: 100;
-  margin: 0;
-  padding: 0;
-}
-
-#page-top1 {
-  display: block;
-  position: fixed;
-  z-index: 9999;
-  bottom: -250px;
-  right: 10px;
-  width: 35px;
-  height: 35px;
-  padding: 0;
-  color: #222;
-  text-align: center;
-  text-decoration: none;
-  transition: 1s;
-  -webkit-transition: 1s;
-}
-
-#page-top1:hover {
-  background: ;
-  transform: translateY(-10px);
-}
-
-#top_scroll:hover {
-  background: #fff;
+#top_scroll:hover{
+    background: #fff;
 }
 
 .square_btn {
-  position: relative;
-  display: inline-block;
-  padding: 0.25em 0.5em;
-  text-decoration: none;
-  color: #FFF;
-  background: #4646ff;
-  border-bottom: solid 2px #1e1eff;
-  border-radius: 4px;
-  box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
-  font-weight: bold;
+    position: relative;
+    display: inline-block;
+    padding: 0.25em 0.5em;
+    text-decoration: none;
+    color: #FFF;
+    background: #4646ff;
+    border-bottom: solid 2px #1e1eff;
+    border-radius: 4px;
+    box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
+    font-weight: bold;
+    font-size: 15px;
 }
 
 .square_btn:active {
-  border-bottom: solid 2px #4646ff;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+    border-bottom: solid 2px #4646ff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
