--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,10 @@
   <meta name='keywords' content=''>
   <meta name='description' content="">
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" media='screen' href="static/css/login.css">
 
-  <link rel="stylesheet" media='screen and min-width:1024px)' href="static/css/login.css">
-  <link rel="stylesheet" media='screen and max-width:1023px)' href="static/css/login.css">
+  <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="static/css/login_sp.css">
+  <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="static/css/login_pad.css">
+  <link rel="stylesheet" media='screen and (min-width:769px)' href="static/css/login.css">
 
 
   <title>tukutter</title>
