--- a/templates/pro.html
+++ b/templates/pro.html
@@ -8,8 +8,9 @@
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" media='screen' href="static/css/pro.css">
 
-  <link rel="stylesheet" media='screen and min-width:1024px)' href="static/css/pro.css">
-  <link rel="stylesheet" media='screen and max-width:1023px)' href="static/css/pro.css">
+  <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="static/css/pro_sp.css">
+  <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="static/css/pro_pad.css">
+  <link rel="stylesheet" media='screen and (min-width:769px)' href="static/css/pro.css">
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script type="text/javascript" src="static/js/common.js"></script>
@@ -62,8 +63,8 @@
           <img src="{{myrow[3]}}" alt="">
           <p>
 
-            <span class="user-name" name="name">{{myrow[0]}}</span>
             <span class="tweet-time" name="time">{{myrow[1]}}</span>
+            <span class="user-name" name="name">{{myrow[0]}}</span>
 
           </p>
         </div>
