--- a/templates/search.html
+++ b/templates/search.html
@@ -8,8 +8,9 @@
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" media='screen' href="static/css/search.css">
 
-  <link rel="stylesheet" media='screen and min-width:1024px)' href="static/css/search.css">
-  <link rel="stylesheet" media='screen and max-width:1023px)' href="static/css/search.css">
+  <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="static/css/search_sp.css">
+  <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="static/css/search_pad.css">
+  <link rel="stylesheet" media='screen and (min-width:769px)' href="static/css/search.css">
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script type="text/javascript" src="static/js/common.js"></script>
@@ -67,12 +68,12 @@
 
           <p name="comment">{{myrow[0]}}</p>
 
+          <div class="stream-footer">
+            <div class="favorite">
+              <a href="/oki/{{myrow[4]}}"><img src="static/img/logo-pic.png" alt=""></a>
+            </div>
         </div>
-        <div class="stream-footer">
-          <div class="favorite">
-            <a href="/oki/{{myrow[4]}}"><img src="static/img/logo-pic.png" alt=""></a>
-          </div>
-        </div>
+       </div>
       </div>
     </div>
   </div>
