--- a/templates/tweet.html
+++ b/templates/tweet.html
@@ -8,9 +8,9 @@
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" media='screen' href="static/css/tweet.css">
 
-  <link rel="stylesheet" media='screen and min-width:1024px)' href="static/css/tweet.css">
-  <link rel="stylesheet" media='screen and max-width:1023px)' href="static/css/tweet.css">
-
+  <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="static/css/tweet_sp.css">
+  <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="static/css/tweet_pad.css">
+  <link rel="stylesheet" media='screen and (min-width:769px)' href="static/css/tweet.css">
 
   <title>tukutter</title>
 
