--- a/static/css/pro_pad.css
+++ b/static/css/pro_pad.css
@@ -243,8 +243,8 @@ a.cp_btn {
   padding: 0.3em;
   text-align: center;
   text-decoration: none;
-  color: #AAAAAA;
-  border: 2px solid #AAAAAA;
+  color: #6091d3;
+  border: 2px solid #6091d3;
   border-radius: 3px;
   transition: .4s;
 }
