--- a/templates/edit.html
+++ b/templates/edit.html
@@ -23,6 +23,11 @@
     <div class="profile">
       <a href="pro"><img src="{{pro[0]}}" alt="プロフィール"></a>
       <p>{{pro[2]}}</p>
+
+      <div class="back">
+        <a href="/pro"><input type="submit" value="戻る" /></a>
+      </div>
+      
     </div>
     <div class="nav">
 
