--- a/templates/follower.html
+++ b/templates/follower.html
@@ -27,6 +27,11 @@
     <div class="profile">
       <a href="/pro"><img src="{{test[1]}}" alt="プロフィール"></a>
       <p>{{test[0]}}</p>
+
+      <div class="back">
+        <a href="/pro"><input type="submit" value="戻る" /></a>
+      </div>
+
     </div>
     {% endfor %}
     <div class="nav">
