--- a/templates/tweet.html
+++ b/templates/tweet.html
@@ -42,7 +42,7 @@
     <div class='tweet_comment'>
 
       <form action="/tweet" method="POST">
-        <textarea cols="30" rows="5" maxlength="150" name="tweet" placeholder="150字以内で入力してください。" wrap="hard"></textarea>
+        <textarea cols="30" rows="5" maxlength="150" name="tweet" placeholder="今の気持ちをつぶやいてみよう！" wrap="hard"></textarea>
       <div class='erra'>{{test}}</div>
       <div class='submit'>
         <input type="submit" name="save" value="Tweet">
