--- a/static/css/pro_sp.css
+++ b/static/css/pro_sp.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 .profile {
   display: inline-block;
   width: 100%;
@@ -33,7 +34,7 @@ div.nav {
 /* --- メニューエリア --- */
 
 div.nav ul.nl {
-  width: 350px;
+  width: 330px;
   /* メニューの幅 */
   margin: 0 auto;
   /* センターに配置 */
@@ -46,6 +47,7 @@ div.nav ul.nl {
   /* メニューの右境界線 */
   list-style-type: none;
   text-align: center;
+  font-size: 11px;
 }
 
 /* --- メニュー項目 --- */
@@ -100,7 +102,7 @@ div.nav ul.nl li a:hover {
 }
 
 .profilecard {
-  width: 38vw;
+  width: 45vw;
   margin: 3vw auto;
   padding: 1vw;
   background-color: #EEEEEE;
@@ -163,7 +165,7 @@ a :hover {
 }
 
 .stream {
-  width: 45vw;
+  width: 53vw;
   margin: 0 auto;
 }
 
@@ -228,7 +230,7 @@ p .user-name {
 
 .stream-delete {
   margin-top: 2vw;
-  margin-left: 7vw;
+  margin-left: 9vw;
   margin-bottom: 1vw;
   margin-right: 3vw;
   display: flex;
@@ -242,8 +244,8 @@ a.cp_btn {
   padding: 0.3em;
   text-align: center;
   text-decoration: none;
-  color: #AAAAAA;
-  border: 2px solid #AAAAAA;
+  color: #6091d3;
+  border: 2px solid #6091d3;
   border-radius: 3px;
   transition: .4s;
 }
