--- a/static/css/user_pro.css
+++ b/static/css/user_pro.css
@@ -14,6 +14,7 @@
 .profile p {
   font-size: 5vw;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 /* --- ナビゲーションバー --- */
@@ -166,6 +167,16 @@ a :hover {
   display: flex;
 }
 
+.stream-header .user-name {
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+.stream-header .tweet-time {
+  font-size: 13px;
+  margin-left: 10px;
+}
+
 .stream-header img {
   margin: 1vw 1vw;
   width: 6vw;
@@ -276,4 +287,49 @@ span .follow {
 .square_btn:active {
     border-bottom: solid 2px #4646ff;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+}
+
+.back {
+  float: right;
+  margin-bottom: 10px;
+  margin-right: 40px;
+}
+
+.back input {
+  background: #0099FF;
+  background-image: -webkit-linear-gradient(top, #0099FF, #0099FF);
+  background-image: -moz-linear-gradient(top, #0099FF, #0099FF);
+  background-image: -ms-linear-gradient(top, #0099FF, #0099FF);
+  background-image: -o-linear-gradient(top, #0099FF, #0099FF);
+  background-image: linear-gradient(to bottom, #0099FF, #0099FF);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  -webkit-box-shadow: 1px 1px 3px #666666;
+  -moz-box-shadow: 1px 1px 3px #666666;
+  box-shadow: 1px 1px 3px #666666;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 10px 15px 10px 15px;
+  text-decoration: none;
+  cursor: pointer;
+  cursor: hand;
+  margin: 0 20px;
+  font-size: 15px;
+}
+
+.back input:hover {
+  background: #6699FF;
+  background-image: -webkit-linear-gradient(top, #6699FF, #6699FF);
+  background-image: -moz-linear-gradient(top, #6699FF, #6699FF);
+  background-image: -ms-linear-gradient(top, #6699FF, #6699FF);
+  background-image: -o-linear-gradient(top, #6699FF, #6699FF);
+  background-image: linear-gradient(to bottom, #6699FF, #6699FF);
+  text-decoration: none;
+  cursor: pointer;
+  cursor: hand;
+  margin: 0 20px;
+
+  text-shadow: 2px 2px 2px black;
 }
