--- a/templates/user_pro.html
+++ b/templates/user_pro.html
@@ -27,6 +27,10 @@
       <img src="../{{pro[2]}}" alt="プロフィール">
       <p>{{pro[0]}}</p>
 
+      <div class="back">
+        <a href="/"><input type="submit" value="戻る" /></a>
+      </div>
+
     </div>
     <div class="nav">
 
