--- a/static/css/edit.css
+++ b/static/css/edit.css
@@ -1,5 +1,13 @@
 @charset "utf-8";
 
+body {
+  background-image: url("../img/map.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  background-position: 0 50px;
+}
+
 .profile {
   display: inline-block;
   width: 100%;
