--- a/templates/login.html
+++ b/templates/login.html
@@ -43,7 +43,7 @@
       <hr>
     </form>
 
-      <a href="/new"><p class="submit"><input type="submit" value="アカウントがない人は登録" /></p></a>
+      <a href="/yuryou"><p class="submit"><input type="submit" value="アカウントがない人は登録" /></p></a>
 
   </div>
 </body>
