--- a/templates/oki.html
+++ b/templates/oki.html
@@ -25,6 +25,7 @@
   <header>
     <div class="profile">
       <a href="/pro"><img src="{{tests[1]}}" alt="プロフィール"></a>
+      <a href="/" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
       <p>{{tests[0]}}</p>
     </div>
   {% endfor %}
@@ -43,7 +44,7 @@
   </header>
 {% if count > 1 %}
  <div class='sub'>
-  <div class=erra><img src="static/img/oki.png">
+  <div class=erra><img src="static/img/oki_img.png">
     <p>{{com}}</p>
   </div>
  </div>
