--- a/templates/search.html
+++ b/templates/search.html
@@ -24,6 +24,7 @@
     {% for view in views%}
     <div class="profile">
       <a href="pro"><img src="{{view[1]}}" alt="プロフィール"></a>
+      <a href="/" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
       <p>{{view[0]}}</p>
     </div>
     {% endfor %}
