--- a/static/css/pro_sp.css
+++ b/static/css/pro_sp.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 
+.tukutter {
+  float: right;
+  display: block;
+  width: 70px;
+}
+
 .profile {
   display: inline-block;
   width: 100%;
