--- a/static/css/top_sp.css
+++ b/static/css/top_sp.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
-/*スマホ*/
+/*iphon*/
+
+.tukutter {
+  float: right;
+  display: block;
+  width: 70px;
+}
+
 header {
   margin-bottom: 40px;
 }
