--- a/static/css/tweet_pad.css
+++ b/static/css/tweet_pad.css
@@ -1,5 +1,19 @@
 @charset "utf-8";
 
+.tukutter {
+  float: right;
+  display: block;
+  width: 180px;
+}
+
+body {
+  background-image: url("../img/map.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  background-position: 0 50px;
+}
+
 header {
   margin-bottom: 40px;
 }
