--- a/static/css/user_pro_pad.css
+++ b/static/css/user_pro_pad.css
@@ -1,5 +1,19 @@
 @charset "utf-8";
 
+.tukutter {
+  float: right;
+  display: block;
+  width: 180px;
+}
+
+body {
+  background-image: url("../img/map.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  background-position: 0 50px;
+}
+
 .profile {
   display: inline-block;
   width: 100%;
@@ -14,7 +28,7 @@
 .profile p {
   font-size: 5vw;
   text-align: center;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 /* --- ナビゲーションバー --- */
