--- a/templates/check.html
+++ b/templates/check.html
@@ -6,9 +6,9 @@
   <meta name='keywords' content=''>
   <meta name='description' content="">
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="5;URL=http://localhost:8080/new">
+  <meta http-equiv="refresh" content="10;URL=http://localhost:8080/info">
   <link rel="shortcut icon" href="static/img/twitter.png">
-  <link rel="stylesheet" href="static/css/info.css">
+  <link rel="stylesheet" href="static/css/check.css">
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script type="text/javascript" src="static/js/common.js"></script>
@@ -19,16 +19,15 @@
 <body>
 
   <div class='main'>
+
     <img src="static/img/test.png" alt="">
-    <div class='info'>
-      <p>決済を確認しました！</p>
-      <p>まだ、登録は終了していないよ！</p>
-      <p>登録後、自分のログインIDと<br>パスワードを決して忘れないでね！！</p>
-      <p>5秒後にアカウント登録フォームに移動します。</p>
+    <div class='load'>
+      <img src="static/img/ajax-loader.gif" alt="">
     </div>
-  </div>
-  <div class='image'>
-    <img src="static/img/thankyou.png" alt="">
+    <div class='info'>
+      <p>しばらくおまちください。</p>
+      <p>支払処理を行なっております。</p>
+    </div>
   </div>
 
 </body>
